[gd_scene load_steps=22 format=3 uid="uid://cu480gijlilc"]

[ext_resource type="Script" uid="uid://dhj5xa5aw5u7e" path="res://scenes/ui/menus/odd_menu.gd" id="1_74csd"]
[ext_resource type="Theme" uid="uid://ch4ic0feakt4r" path="res://assets/themes/default_theme.tres" id="2_lqjak"]
[ext_resource type="PackedScene" uid="uid://b7jbkkvivmc7c" path="res://scenes/ui/odd_button.tscn" id="3_48kp7"]
[ext_resource type="Script" uid="uid://8o17udmcndge" path="res://scenes/ui/menus/game_stats_box.gd" id="3_kv4ee"]
[ext_resource type="Script" uid="uid://ce2yyeroaj7w4" path="res://scenes/ui/menus/game_stat.gd" id="3_tcs3r"]
[ext_resource type="Script" uid="uid://ca1e01sp6l8wt" path="res://scenes/components/random_audio_player_component.gd" id="4_52l1b"]
[ext_resource type="PackedScene" uid="uid://da10yhbdl8klh" path="res://assets/particles/continue_particles.tscn" id="4_yooxo"]
[ext_resource type="AudioStream" uid="uid://csxvnvfnvhio0" path="res://assets/audio/sfx/fifthSaw_stab_fast.ogg" id="5_7qmko"]
[ext_resource type="Material" uid="uid://dxac3sbue2ygf" path="res://assets/particles/continue_particle_process_material.tres" id="5_j0c6a"]
[ext_resource type="PackedScene" uid="uid://77buhb1awwg3" path="res://scenes/ui/menus/show_controls_screen.tscn" id="6_ene0j"]
[ext_resource type="PackedScene" uid="uid://cr76tloydxhqv" path="res://scenes/ui/menus/show_options_screen.tscn" id="7_jfcxr"]

[sub_resource type="Animation" id="Animation_fu5m3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions/RestoreMarginContainer:theme_override_constants/margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions/RestoreMarginContainer:theme_override_constants/margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/PanelContainer/MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/StatsBox:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ijkb4"]
resource_name = "auto"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"focus_first_available_choice"
}, {
"args": [],
"method": &"animation_player_play_restore"
}]
}

[sub_resource type="Animation" id="Animation_buwwf"]
resource_name = "out"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/StatsBox:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3007678),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7k7h4"]
resource_name = "restore"
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions/RestoreMarginContainer:theme_override_constants/margin_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 36, 32]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions/RestoreMarginContainer:theme_override_constants/margin_bottom")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 36, 32]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_buwwf"]
_data = {
&"RESET": SubResource("Animation_fu5m3"),
&"auto": SubResource("Animation_ijkb4"),
&"out": SubResource("Animation_buwwf"),
&"restore": SubResource("Animation_7k7h4")
}

[sub_resource type="Theme" id="Theme_kv4ee"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f748d"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_detail = 5

[sub_resource type="Animation" id="Animation_k4mhs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RestoreMarginContainer/RestoreButton:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.568627, 0.647059, 0.858824, 1)]
}

[sub_resource type="Animation" id="Animation_moutl"]
resource_name = "restorebuttonshimmer"
length = 5.0
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RestoreMarginContainer/RestoreButton:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.568627, 0.647059, 0.858824, 1), Color(0.5676, 0.86, 0.767407, 1), Color(0.7138, 0.86, 0.5676, 1), Color(0.86, 0.630953, 0.5676, 1), Color(0.86, 0.5676, 0.782027, 1), Color(0.568627, 0.647059, 0.858824, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k4mhs"]
_data = {
&"RESET": SubResource("Animation_k4mhs"),
&"restorebuttonshimmer": SubResource("Animation_moutl")
}

[node name="GameOverMenu" type="CanvasLayer"]
process_mode = 3
layer = 5
script = ExtResource("1_74csd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_buwwf")
}
autoplay = "auto"

[node name="MarginContainer" type="MarginContainer" parent="."]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
process_mode = 3
layout_mode = 2
theme = SubResource("Theme_kv4ee")
theme_override_styles/panel = SubResource("StyleBoxFlat_f748d")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
process_mode = 3
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
process_mode = 3
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_lqjak")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer"]
process_mode = 3
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Menu" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer"]
process_mode = 3
layout_mode = 2
theme_override_constants/separation = 16

[node name="MenuLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu"]
unique_name_in_owner = true
process_mode = 3
modulate = Color(0.4392157, 0.81960785, 1, 1)
layout_mode = 2
theme = ExtResource("2_lqjak")
theme_type_variation = &"BigLabel"
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="StatsBox" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu" node_paths=PackedStringArray("game_stats")]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("3_kv4ee")
game_stats = [NodePath("Time"), NodePath("ThreatLevel"), NodePath("Projectiles"), NodePath("CateroidsDefeated"), NodePath("Score")]

[node name="RandomAudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/StatsBox"]
bus = &"SFX"
script = ExtResource("4_52l1b")
streams = Array[AudioStream]([ExtResource("5_7qmko")])
randomize_vol = false
min_volume = 0.0
max_volume = -5.0
min_pitch = 1.76
max_pitch = 1.76
metadata/_custom_type_script = "uid://ca1e01sp6l8wt"

[node name="ShowStatTimer" type="Timer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/StatsBox"]
wait_time = 0.3
one_shot = true

[node name="Time" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/StatsBox" node_paths=PackedStringArray("_value")]
layout_mode = 2
script = ExtResource("3_tcs3r")
_value = NodePath("Value")

[node name="Name" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/StatsBox/Time"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "TIME ELAPSED"

[node name="Value" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/StatsBox/Time"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 32
text = "0:00"
horizontal_alignment = 2

[node name="ThreatLevel" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/StatsBox" node_paths=PackedStringArray("_value")]
layout_mode = 2
script = ExtResource("3_tcs3r")
_value = NodePath("Value")

[node name="Name" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/StatsBox/ThreatLevel"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "THREAT LEVEL"

[node name="Value" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/StatsBox/ThreatLevel"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 2

[node name="Projectiles" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/StatsBox" node_paths=PackedStringArray("_value")]
layout_mode = 2
script = ExtResource("3_tcs3r")
_value = NodePath("Value")

[node name="Name" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/StatsBox/Projectiles"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PROJECTILES"
horizontal_alignment = 2

[node name="Value" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/StatsBox/Projectiles"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 2

[node name="CateroidsDefeated" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/StatsBox" node_paths=PackedStringArray("_value")]
layout_mode = 2
script = ExtResource("3_tcs3r")
_value = NodePath("Value")

[node name="Name" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/StatsBox/CateroidsDefeated"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "CATEROIDS"
horizontal_alignment = 2

[node name="Value" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/StatsBox/CateroidsDefeated"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 2

[node name="Score" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/StatsBox" node_paths=PackedStringArray("_value")]
layout_mode = 2
script = ExtResource("3_tcs3r")
_value = NodePath("Value")

[node name="Name" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/StatsBox/Score"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SCORE"

[node name="Value" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/StatsBox/Score"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 2

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_constants/separation = 8

[node name="RestoreMarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions"]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="RestoreAnimationPlayer" type="AnimationPlayer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions/RestoreMarginContainer"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_k4mhs")
}
autoplay = "restorebuttonshimmer"

[node name="RestoreButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions/RestoreMarginContainer" instance=ExtResource("3_48kp7")]
unique_name_in_owner = true
visible = false
self_modulate = Color(0.568627, 0.647059, 0.858824, 1)
layout_mode = 2
text = "REVIVE"

[node name="Node2D" type="Node2D" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions/RestoreMarginContainer/RestoreButton"]
position = Vector2(-25.78, 16.17)

[node name="ContinueParticles" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions/RestoreMarginContainer/RestoreButton/Node2D" instance=ExtResource("4_yooxo")]
process_material = ExtResource("5_j0c6a")

[node name="ResumeButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions" instance=ExtResource("3_48kp7")]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 2
text = "RESUME"
is_back_button = true

[node name="ControlsButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions" instance=ExtResource("3_48kp7")]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 2
text = "CONTROLS"
spawn_menu = true
menu_to_spawn = ExtResource("6_ene0j")

[node name="OptionsButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions" instance=ExtResource("3_48kp7")]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 2
text = "OPTIONS"
spawn_menu = true
menu_to_spawn = ExtResource("7_jfcxr")

[node name="RestartButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions" instance=ExtResource("3_48kp7")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
text = "RETRY"

[node name="LeaveButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions" instance=ExtResource("3_48kp7")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
text = "MAIN MENU"
require_selection_confirmation = true
